backend/mobipay_backend/src/main/java/com/example/mobipay/domain/postpayments/error/InvalidMobiApiKeyException.java
package com.example.mobipay.domain.postpayments.error;

public class InvalidMobiApiKeyException extends RuntimeException {

    public InvalidMobiApiKeyException() {
    }

    public InvalidMobiApiKeyException(String message) {
        super(message);
    }

    @Override
    public synchronized Throwable fillInStackTrace() {
        return this;
    }

}